force-app/main/default/objects/COM_Facility__c/COM_Facility__c.object-meta.xml
<CustomObject>
    <description>Facility Master 정보 관리(기회, 계약 연계)</description>
    <label>Facility</label>
    <nameField>
        <label>Facility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facilities</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>