force-app/main/default/objects/COM_Facility__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>(X)Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_ApprovalStatus</valueSetName>
    </valueSet>
</CustomField>