force-app/main/default/objects/COM_Facility__c/fields/PeriodFromDate__c.field-meta.xml
<CustomField>
    <fullName>PeriodFromDate__c</fullName>
    <label>Period From</label>
    <type>Date</type>
</CustomField>