force-app/main/default/objects/COM_Facility__c/fields/PeriodToDate__c.field-meta.xml
<CustomField>
    <fullName>PeriodToDate__c</fullName>
    <label>Period To</label>
    <type>Date</type>
</CustomField>