force-app/main/default/objects/COM_Facility__c/fields/ReinsuredFac__c.field-meta.xml
<CustomField>
    <fullName>ReinsuredFac__c</fullName>
    <label>REINSURED (Facility)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>