force-app/main/default/objects/COM_Facility__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>