force-app/main/default/objects/COM_Facility__c/fields/ShortName__c.field-meta.xml
<CustomField>
    <fullName>ShortName__c</fullName>
    <label>Facility Name (Short)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>