force-app/main/default/objects/COM_Facility__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>(X)Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>De-active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>