force-app/main/default/objects/COM_Facility__c/fields/UY__c.field-meta.xml
<CustomField>
    <fullName>UY__c</fullName>
    <label>UY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_UY</valueSetName>
    </valueSet>
</CustomField>