force-app/main/default/objects/COM_Facility__c/validationRules/Change_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Active</fullName>
    <active>true</active>
    <description>Active는 승인절차를 통해서만 가능하게 제어</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Active&quot;),
  OR(
    ISPICKVAL(PRIORVALUE(Status__c), &quot;De-active&quot;),
    ISBLANK(PRIORVALUE(Status__c))
  )
)</errorConditionFormula>
    <errorMessage>Activation is available only through an approval process.</errorMessage>
</ValidationRule>